ui/webui/resources/cr_components/searchbox/searchbox.css
/* ... */
:host-context(.focus-outline-visible) .searchbox-icon-button-container:focus-within {
  box-shadow: var(--ntp-focus-shadow);
}

:host(:not([use-webkit-search-icons_])) #voiceSearchButton {
  background-image: url(//resources/cr_components/searchbox/icons/mic.svg);
}

:host(:not([use-webkit-search-icons_])) #lensSearchButton {
  background-image: url(//resources/cr_components/searchbox/icons/camera.svg);
}

:host([use-webkit-search-icons_]) #voiceSearchButton {
  -webkit-mask-image: url(//resources/cr_components/searchbox/icons/mic.svg);
}

:host([use-webkit-search-icons_]) #lensSearchButton {
  -webkit-mask-image: url(//resources/cr_components/searchbox/icons/camera.svg);
}

:host([use-webkit-search-icons_]) #voiceSearchButton,
:host([use-webkit-search-icons_]) #lensSearchButton {
  -webkit-mask-position: center;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 21px 21px;
  background-color: var(--color-searchbox-lens-voice-icon-background);
}

:host([use-webkit-search-icons_][compose-button-enabled]) #voiceSearchButton,
:host([use-webkit-search-icons_][compose-button-enabled]) #lensSearchButton {
  background-color: #1F1F1F;
}

:host-context([dir='rtl'])
    .searchbox-icon-button-container.voice {
  left: var(--cr-searchbox-voice-icon-offset);
  right: unset;
}

:host .searchbox-icon-button-container.voice {
  right: var(--cr-searchbox-voice-icon-offset);
}

:host([compose-button-enabled][dropdown-is-visible])
    .searchbox-icon-button-container {
  display: none;
}

:host-context([dir='rtl']) .searchbox-icon-button {
  left: 16px;
  right: unset;
}

:host-context([dir='rtl']) .searchbox-icon-button-container {
  left: 16px;
  right: unset;
}

:host-context([dir='rtl']) .searchbox-icon-button-container.voice {
  left: var(--cr-searchbox-voice-icon-offset);
  right: unset;
}

:host([compose-button-enabled]):host-context([dir='rtl'])
    .searchbox-icon-button-container.lens {
  left: calc(12px + var(--cr-compose-button-width)
    + var(--cr-searchbox-icon-spacing));
  right: unset;
}

:host([compose-button-enabled][searchbox-lens-search-enabled_]) {
 --cr-searchbox-voice-icon-offset: calc(16px + 2 * var(--cr-searchbox-icon-spacing) + var(--cr-searchbox-icon-width) + var(--cr-compose-button-width));
}

:-webkit-any(input, cr-searchbox-icon, .searchbox-icon-button) {
  z-index: 100;
}

.dropdownContainer {
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 99;
}

.truncate {
  overflow: hidden;
  text-overflow: ellipsis;
}

#thumbnailContainer {
  align-content: center;
  inset-block-start: var(--cr-searchbox-icon-top-position);
  inset-inline-start: 52px;
  height: 100%;
  outline: none;
  position: absolute;
  z-index: 101;
}

:host([enable-thumbnail-sizing-tweaks_]) #thumbnailContainer {
  inset-inline-start: 50px;
}

:host-context([is-back-arrow-visible]) #thumbnailContainer {
  inset-inline-start: 16px;
}

:host([ntp-realbox-next-enabled]) input::placeholder {
  font-size: 18px;
  color: var(--color-new-tab-page-composebox-type-ahead);
  font-weight: 400;
}

:host([ntp-realbox-next-enabled]) {
  --cr-searchbox-border-radius: 26px;
  --cr-searchbox-dropdown-padding-bottom: 12px;
  --cr-searchbox-icon-size: 40px;
  --text-input-inline-start-spacing: 16px;
}

:host([ntp-realbox-next-enabled]) cr-searchbox-dropdown::part(dropdown-content) {
  background-color: unset;
  border-radius: unset;
  box-shadow: unset;
  gap: unset;
  margin-bottom: unset;
  overflow: unset;
  padding-bottom: unset;
  padding-top: unset;
}

:host([ntp-realbox-next-enabled]) contextual-entrypoint-and-carousel::part(composebox-entrypoint) {
  z-index: 100;
}

:host([ntp-realbox-next-enabled]) contextual-entrypoint-and-carousel::part(composebox-file-carousel) {
  margin-top: 16px;
}

:host([ntp-realbox-next-enabled]) .dropdownContainer {
  background-color: var(--color-searchbox-results-background);
  border-radius: var(--cr-searchbox-border-radius);
  box-shadow: var(--cr-searchbox-shadow);
  gap: 16px;
  margin-bottom: var(--cr-searchbox-results-margin-bottom, 8px);
  overflow: hidden;
  padding-bottom: var(--cr-searchbox-dropdown-padding-bottom);
  padding-top: var(--cr-searchbox-dropdown-padding-top);
}

:host([ntp-realbox-next-enabled]) #errorScrim {
  border-radius: inherit;
}

:host([realbox-layout-mode^='Tall']) {
  --cr-searchbox-compose-button-position-top: 12px;
  --cr-searchbox-dropdown-padding-top: 60px;
  --cr-searchbox-height: 108px;
  --cr-searchbox-input-padding-top_: 22px;
}

:host([realbox-layout-mode^='Tall']:not([context-files-count_="0"])) {
  --cr-searchbox-dropdown-padding-top: 48px;
}

@media (forced-colors: active) {
  :host([realbox-layout-mode^='Tall']) .dropdownContainer {
    border: 1px solid ActiveBorder;
  }
}

:host([realbox-layout-mode^='Tall']) #inputWrapper {
  background-color: var(--color-searchbox-background);
  border-radius: var(--cr-searchbox-border-radius);
}

:host([realbox-layout-mode^='Tall']) input {
  height: 48px;
  padding-top: var(--cr-searchbox-input-padding-top_);
}

:host([realbox-layout-mode^='Tall']:not([dropdown-is-visible]):not([input-focused_])) input {
  padding-inline-start: 24px;
}

:host([realbox-layout-mode^='Tall']:not([dropdown-is-visible]):not([input-focused_])) cr-searchbox-icon,
:host([realbox-layout-mode^='Tall'][dropdown-is-visible]) .searchbox-icon-button-container {
  display: none;
}

:host([realbox-layout-mode^='Tall']) .searchbox-icon-button {
  bottom: 12px;
  height: var(--cr-searchbox-icon-size);
  padding: 8px 12px;
}

:host([realbox-layout-mode^='Tall']:not([context-files-count_="0"])) #voiceSearchButton,
:host([realbox-layout-mode^='Tall']:not([context-files-count_="0"])) #lensSearchButton {
  display: none;
}

:host([realbox-layout-mode^='Tall'][dropdown-is-visible]) cr-searchbox-icon,
:host([realbox-layout-mode^='Tall'][input-focused_]) cr-searchbox-icon {
  height: 24px;
  inset-inline-start: 12px;
  top: var(--cr-searchbox-input-padding-top_);
}
/* ... */

