[searchbox] Pt 2: fix accessibility tabbing (tall/compactbox)
* This is part 2 of this CL: https://chromium-review.googlesource.com/c/chromium/src/+/7009213
* This CL fixes the accessibility tab outline
not showing in tall mode and compact mode for voice/lens buttons
* Includes changes from parent
* Changed button class references to container class references so
parent changes (added a container) work in tall/compactbox
* adjusted positioning values (top, bottom) to better match Figma and adapt container formatting to tall/compactbox formatting
logic for tall/compactbox cases
* Decoupled height variable of glow animation from searchbox icons
so glow animation shows properly and searchbox icon container is the
proper height according to the Figma
* Removed redundant rtl code

Testing screencasts:

Before (M142 realbox, but similar issue):
https://screencast.googleplex.com/cast/NTUwNzkyMjUzOTgzOTQ4OHwyYWE2ZGU3NC1iMA

After - tall-bottombox:
https://screencast.googleplex.com/cast/NDU1ODg5MDMyNTc3MDI0MHxjYTRjYzE2MC03Mw

After - compactbox:
https://screencast.googleplex.com/cast/NjA2OTE1MzU2NjgxODMwNHw4ZGFlZDcwYS0wNw

Bug: b:450670722
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7008885
Commit-Queue: James Leung <jamesleung@google.com>
Cr-Commit-Position: refs/heads/main@{#1529086}

--- a/ui/webui/resources/cr_components/searchbox/searchbox.css
+++ b/ui/webui/resources/cr_components/searchbox/searchbox.css
@@ -299,11 +299,6 @@ cr-searchbox-icon {
   display: none;
 }
 
-:host-context([dir='rtl']) .searchbox-icon-button {
-  left: 16px;
-  right: unset;
-}
-
 :host-context([dir='rtl']) .searchbox-icon-button-container {
   left: 16px;
   right: unset;
@@ -369,7 +364,12 @@ cr-searchbox-icon {
 :host([ntp-realbox-next-enabled]) {
   --cr-searchbox-border-radius: 26px;
   --cr-searchbox-dropdown-padding-bottom: 12px;
+  /* Cannot touch this searchbox icon size var;
+    it's used by the rainbow outline AI button class in
+    searchbox_compose_button.css. Should be different
+    from other searchbox icons (composebox, voice, lens). */
   --cr-searchbox-icon-size: 40px;
+  --cr-searchbox-voice-lens-size: 36px;
   --text-input-inline-start-spacing: 16px;
 }
 
@@ -443,14 +443,14 @@ cr-searchbox-icon {
   display: none;
 }
 
-:host([realbox-layout-mode^='Tall']) .searchbox-icon-button {
-  bottom: 12px;
-  height: var(--cr-searchbox-icon-size);
-  padding: 8px 12px;
+:host([realbox-layout-mode^='Tall']) .searchbox-icon-button-container {
+  bottom: 10px;
+  top: unset;
+  height: var(--cr-searchbox-voice-lens-size);
 }
 
-:host([realbox-layout-mode^='Tall']:not([context-files-count_="0"])) #voiceSearchButton,
-:host([realbox-layout-mode^='Tall']:not([context-files-count_="0"])) #lensSearchButton {
+:host([realbox-layout-mode^='Tall']:not([context-files-count_="0"]))
+    .searchbox-icon-button-container {
   display: none;
 }
 
@@ -461,13 +461,15 @@ cr-searchbox-icon {
   top: var(--cr-searchbox-input-padding-top_);
 }
 
-:host([realbox-layout-mode^='Tall'][compose-button-enabled]) #lensSearchButton {
+:host([realbox-layout-mode^='Tall'][compose-button-enabled])
+    .searchbox-icon-button-container.lens {
   inset-inline-end: calc(12px + var(--cr-searchbox-icon-spacing));
 }
 
-:host([realbox-layout-mode^='Tall'][searchbox-lens-search-enabled_]) #voiceSearchButton,
-:host([realbox-layout-mode^='Tall'][searchbox-lens-search-enabled_]):host-context([dir='rtl']) #voiceSearchButton {
-  inset-inline-end: calc(12px + var(--cr-searchbox-icon-size) + var(--cr-searchbox-icon-spacing));
+:host([realbox-layout-mode^='Tall'][searchbox-lens-search-enabled_])
+    .searchbox-icon-button-container.voice {
+  inset-inline-end: calc(12px + var(--cr-searchbox-voice-lens-size)
+      + var(--cr-searchbox-icon-spacing));
 }
 
 :host-context([realbox-layout-mode^='Tall']) #composeButton {
@@ -492,13 +494,19 @@ cr-searchbox-icon {
   display: none;
 }
 
-:host([realbox-layout-mode='Compact'][compose-button-enabled][searchbox-lens-search-enabled_]) #lensSearchButton {
+:host([realbox-layout-mode='Compact']) .searchbox-icon-button-container {
+  top: 10px;
+}
+
+:host([realbox-layout-mode='Compact'][compose-button-enabled]
+    [searchbox-lens-search-enabled_]) .searchbox-icon-button-container.lens {
   inset-inline-end: calc(var(--cr-searchbox-icon-spacing) + var(--cr-compose-button-width));
 }
 
-:host([realbox-layout-mode='Compact'][compose-button-enabled][searchbox-lens-search-enabled_]) #voiceSearchButton,
-:host([realbox-layout-mode='Compact'][compose-button-enabled][searchbox-lens-search-enabled_]):host-context([dir='rtl']) #voiceSearchButton {
-  inset-inline-end: calc(var(--cr-searchbox-icon-size) + var(--cr-searchbox-icon-spacing) + var(--cr-compose-button-width));
+:host([realbox-layout-mode='Compact'][compose-button-enabled]
+    [searchbox-lens-search-enabled_]) .searchbox-icon-button-container.voice {
+  inset-inline-end: calc(var(--cr-searchbox-voice-lens-size)
+      + var(--cr-searchbox-icon-spacing) + var(--cr-compose-button-width));
 }
 
 :host([realbox-layout-mode='Compact']) .dropdownContainer {
